--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/lodash": "^4.17.18",
+    "@types/lodash-es": "^4.17.12",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash-unified": "^1.0.3",
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "vitepress": "^1.6.3"
   }
 }
