--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/lodash": "^4.17.18",
     "@types/lodash-es": "^4.17.12",
+    "fast-glob": "^3.3.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lodash-unified": "^1.0.3",
+    "rollup-plugin-esbuild": "^6.2.1",
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@esbuild-kit/cjs-loader": "^2.4.4",
+    "@types/gulp": "^4.0.17",
     "@types/node": "^24.0.3",
+    "gulp": "^5.0.1",
+    "vite": "^6.3.5",
     "vitepress": "^1.6.3"
   }
 }
