--- a/packages/element-x/package.json
+++ b/packages/element-x/package.json
@@ -1,12 +1,29 @@
 {
   "name": "element-x",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "version": "0.0.1",
+  "description": "all components are settled here",
+  "main": "./es/index.mjs",
+  "module": "./es/index.mjs",
+  "types": "./es/index.d.ts",
+  "publishConfig": {
+    "registry": "http://mincase.space:4873/"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "lodash-es":"^4.17.21"
+  },
+  "devDependencies": {
+    "minimist": "^1.2.8"
+  },
+  "exports":{
+    ".": {
+      "types": "./es/index.d.ts",
+      "import": "./es/index.mjs",
+      "require": "./lib/index.js"
+    },
+    "./es/*": {
+      "types": "./es/*/index.d.ts",
+      "import": "./es/*.mjs"
+    },
+    "./*": "./*"
+  }
 }
