--- a/tsconfig.pkg.json
+++ b/tsconfig.pkg.json
@@ -7,13 +7,17 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "declaration": true,
+    "declarationDir": "dist/element-x/es",
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {
       "element-x":["packages/element-x"],
       "@element-x/*":["packages/*"]
     }
   },
-  "exclude": [
-    "dist"
+  "include": [
+    "packages",
+    "typings/env.d.ts"
   ]
 }
