--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "npm run clean:dist",
     "clean:dist": "rimraf dist",
-    "build": " npm run clean && npm run build:dts && npm run build:pkg",
+    "build": " npm run clean && npm run build:dts && npm run build:pkg && npm run build:style",
+    "build:style": "npm run -C packages/theme build",
     "build:dts": "npx vue-tsc -p tsconfig.pkg.json",
     "build:pkg": "npm run -C build start",
     "docs:dev": "vitepress dev docs",
@@ -34,10 +35,19 @@
     "@esbuild-kit/cjs-loader": "^2.4.4",
     "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
+    "@types/gulp-autoprefixer": "^0.0.37",
+    "@types/gulp-rename": "^2.0.6",
+    "@types/gulp-sass": "^5.0.4",
     "@types/node": "^24.0.3",
+    "consola": "^3.4.2",
+    "cssnano": "^7.0.7",
     "fs-extra": "^11.3.0",
     "gulp": "^5.0.1",
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^6.0.1",
     "rimraf": "^6.0.1",
+    "sass": "^1.89.2",
     "vite": "^6.3.5",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.10"
