--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@element-x/components",
+  "name": "@whale-ui/components",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
