--- a/packages/whale-ui/package.json
+++ b/packages/whale-ui/package.json
@@ -1,12 +1,22 @@
 {
   "name": "whale-ui",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "all components are settled here",
   "main": "./es/index.mjs",
   "module": "./es/index.mjs",
   "types": "./es/index.d.ts",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "keywords": [
+    "component library",
+    "ui framework",
+    "ui",
+    "vue"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ALiuYiLin/whale-ui.git"
   },
   "dependencies": {
     "lodash-es": "^4.17.21"
