--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:style": "npm run -C packages/theme build",
     "build:dts": "npx vue-tsc -p tsconfig.pkg.json",
     "build:pkg": "npm run -C build start",
-    "version:update":"cd packages/whale-ui && npm version patch",
-    "publish":"cd dist/whale-ui && npm login && npm publish",
+    "version:update": "cd packages/whale-ui && npm version patch",
+    "publish": "cd dist/whale-ui && npm login && npm publish",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -21,36 +21,41 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@types/lodash": "^4.17.18",
-    "@types/lodash-es": "^4.17.12",
-    "fast-glob": "^3.3.3",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "lodash-unified": "^1.0.3",
-    "rollup-plugin-esbuild": "^6.2.1",
     "vue": "^3.5.17"
   },
   "devDependencies": {
     "@esbuild-kit/cjs-loader": "^2.4.4",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
     "@types/gulp-autoprefixer": "^0.0.37",
     "@types/gulp-rename": "^2.0.6",
     "@types/gulp-sass": "^5.0.4",
+    "@types/lodash": "^4.17.18",
+    "@types/lodash-es": "^4.17.12",
+    "@types/markdown-it-container": "^2.0.10",
     "@types/node": "^24.0.3",
     "consola": "^3.4.2",
     "cssnano": "^7.0.7",
+    "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "gulp": "^5.0.1",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash-unified": "^1.0.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
     "rimraf": "^6.0.1",
+    "rollup-plugin-esbuild": "^6.2.1",
     "sass": "^1.89.2",
+    "unplugin-vue-components": "^28.7.0",
     "vite": "^6.3.5",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.10"
   }
