--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+# dist
 dist-ssr
 *.local
 
@@ -23,5 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
+
+
+# /docs/.vitepress/dist/
+
+/dist/
 
 docs/.vitepress/cache
